--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1> website has been wanged as of 9/9/24 </h1>
+<br><p>further wangings may be prevented by sending 1 btc to 38gzyMmvK83ceuhYCJex5Up5UE4cXdMbGz</p>
