--- a/index.html
+++ b/index.html
@@ -1,2 +1,104 @@
-<h1> website has been wanged as of 9/9/24 </h1>
-<br><p>further wangings may be prevented by sending 1 btc to 38gzyMmvK83ceuhYCJex5Up5UE4cXdMbGz</p>
+<!DOCTYPE html>
+<html>
+<head>
+<!-- Metadata -->
+<meta charset='utf-8'>
+<meta content='width=device-width, initial-scale=1' name='viewport'>
+<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+<meta content='the robotics club of birchmount park collegiate institute' name='description'>
+<meta content='robotics, robotics club, club, birchmount, tdsb, birchmount park, VEX, VEX robotics, VEX V5, VRC, high school, scarborough' name='keywords'>
+<!-- Title and favicon -->
+<link href='/images/favicon.ico' rel='icon' type='image/ico'>
+<title>B(ro)botics | 41977B</title>
+<link href="/stylesheets/all-ee17f0e7.css" rel="stylesheet" />
+<script src="/javascripts/all.js"></script>
+</head>
+<body class='index'>
+<div class='navbar navbar-inverse navbar-static-top' role='navigation'>
+<div class='container'>
+<div class='navbar-header'>
+</div>
+<div class='pull-right'>
+<!-- We are using an older version of FontAwesome (4.5.0), so these icons aren't optimal. -->
+<ul class='nav navbar-nav'>
+<li>
+<a href="/projects"><i class='fa fa-cube'></i>
+Projects
+</a></li>
+<li>
+<a href="/docs"><i class='fa fa-book'></i>
+Docs
+</a></li>
+<li>
+<a href="/contact"><i class='fa fa-user'></i>
+Contact
+</a></li>
+<li>
+<a href='https://schoolweb.tdsb.on.ca/birchmountpark'>
+<i class='fa fa-building'></i>
+School Website
+</a>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<div class='jumbotron'>
+<div class='container'>
+<h1>
+<img alt='The club logo, depicting Allen the monkey.' height='48' src='/images/allen-circle-8d6836c3.png' width='48'>
+Birchmount Robotics Club
+</h1>
+<img alt='Picture of the robotics team at the competition working' id='main-image' src='/images/Group pic 3.png' style='width: 1000px; height: 500px; object-fit: contain;'>
+</div>
+</div>
+<div class='main-content'>
+<div class='container'>
+<h2>About Us</h2>
+<p>The Birchmount Robotics Club is the robotics club of Birchmount Park Collegiate Institute in Scarborough, ON. Our members are experienced in various fields, such as computer-aided design, programming, and problem-solving.</p>
+<h2>Our Members</h2>
+<div class='row'>
+<div class='col-md-3'>
+<div class='ms-auto'><img src='images/Tyler-007c8117.jpg' alt='Picture of Tyler'/></div>
+</div>
+<div class='col-md-3'>
+<h4>Tyler</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class='col-md-3'>
+<div class='ms-auto'><img src='images/Wesley-07e199a5.jpg' alt='Picture of Wesley'/></div>
+</div>
+<div class='col-md-3'>
+<h4>Wesley</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
+</div>
+
+</div>
+</div>
+<div class='next-steps'>
+<div class='container'>
+<h2>Here are a few places you may want to go next...</h2>
+<hr>
+<div class='row'>
+<div class='col-xs-6'>
+<a href="https://github.com/BPCI-Robotics" class="composite"><i class='fa fa-github big-circle'></i>
+<h3>Source Code Repository</h3>
+</a></div>
+</div>
+</div>
+</div>
+
+<footer>
+<div class='container'>
+<small class='pull-left text-muted copyright'>
+&copy; 2024-2024 Birchmount Robotics Club
+</small>
+<div class='social-icons pull-right'>
+<a href="https://github.com/BPCI-Robotics" target="_blank"><i class='fa fa-github-alt'></i>
+</a></div>
+</div>
+</footer>
+</body>
+</html>
