--- a/index.html
+++ b/index.html
@@ -60,20 +60,21 @@ Birchmount Robotics Club
 <h2>Our Members</h2>
 <div class='row'>
 <div class='col-md-3'>
+<div class='ms-auto'><img src='images/wang.jpg' alt='Picture of Wang'/></div>
+</div>
+<div class='col-md-3'>
+<h4>WANG!!!</h4>
+<p>When it is this big, they call you MISTER WANG.</p>
+</div>
+</div>
+<div class='col-md-3'>
 <div class='ms-auto'><img src='images/Tyler-007c8117.jpg' alt='Picture of Tyler'/></div>
 </div>
 <div class='col-md-3'>
 <h4>Tyler</h4>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
-<div class='col-md-3'>
-<div class='ms-auto'><img src='images/Wesley-07e199a5.jpg' alt='Picture of Wesley'/></div>
-</div>
-<div class='col-md-3'>
-<h4>Wesley</h4>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-</div>
+
 
 </div>
 </div>
