--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Birchmount Robotics Club
 <h2>Our Members</h2>
 <div class='row'>
 <div class='col-md-3'>
-<div class='ms-auto'><img src='images/wang.jpg' alt='Picture of Wang'/></div>
+<div class='ms-auto'><img src='images/megawang.jpg' alt='Picture of Wang'/></div>
 </div>
 <div class='col-md-3'>
 <h4>WANG!!!</h4>
