--- a/index.html
+++ b/index.html
@@ -69,7 +69,24 @@ Birchmount Robotics Club
 </div>
 </div>
 <div class='col-md-3'>
-<div class='ms-auto'><img src='images/Tyler-007c8117.jpg' alt='Picture of Tyler'/></div>
+<!--><div class='ms-auto'><img src='images/Tyler-007c8117.jpg' alt='Picture of Tyler'/></div><!-->
+  <div class="row">
+  <div class="column">
+    <img src="Tyler-007c8117.jpg" alt="t" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="Tyler-007c8117.jpg" alt="y" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="Tyler-007c8117.jpg" alt="l" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="Tyler-007c8117.jpg" alt="e" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="Tyler-007c8117.jpg" alt="r" style="width:100%">
+  </div>
+</div>
 </div>
 <div class='col-md-3'>
 <h4>Tyler</h4>
