--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@ Birchmount Robotics Club
 <!--><div class='ms-auto'><img src='images/Tyler-007c8117.jpg' alt='Picture of Tyler'/></div><!-->
   <div class="row">
   <div class="column">
-    <img src="Tyler-007c8117.jpg" alt="t" style="width:100%">
+    <img src='images/Tyler-007c8117.jpg' alt="t" style="width:100%">
   </div>
   <div class="column">
-    <img src="Tyler-007c8117.jpg" alt="y" style="width:100%">
+    <img src='images/Tyler-007c8117.jpg' alt="y" style="width:100%">
   </div>
   <div class="column">
-    <img src="Tyler-007c8117.jpg" alt="l" style="width:100%">
+    <img src='images/Tyler-007c8117.jpg' alt="l" style="width:100%">
   </div>
   <div class="column">
-    <img src="Tyler-007c8117.jpg" alt="e" style="width:100%">
+    <img src='images/Tyler-007c8117.jpg' alt="e" style="width:100%">
   </div>
   <div class="column">
-    <img src="Tyler-007c8117.jpg" alt="r" style="width:100%">
+    <img src='images/Tyler-007c8117.jpg' alt="r" style="width:100%">
   </div>
 </div>
 </div>
