--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Birchmount Robotics Club
 </div>
 <div class='col-md-3'>
 <br>
-<h4>WANG!!!</h4>
+<h1>MR WANG!!!</h1>
 <p>When it is this big, they call you MISTER WANG.</p>
 </div>
 </div>
