--- a/index.html
+++ b/index.html
@@ -56,21 +56,27 @@ Birchmount Robotics Club
 <div class='main-content'>
 <div class='container'>
 <h2>About Us</h2>
-<p>The Birchmount Robotics Club is the robotics club of Birchmount Park Collegiate Institute in Scarborough, ON. Our members are experienced in various fields, such as computer-aided design and programming. Our club is completely <b>student-run</b>, and everything is managed by the students of the club.</p>
+<p>The Birchmount Robotics Club is the robotics club of Birchmount Park Collegiate Institute in Scarborough, ON. Our members are experienced in various fields, such as computer-aided design and programming. Our club is completely <b>student-run</b>, and everything is managed by the members of the club.</p>
+<p>Our club is mostly comprised of students in the gifted program. This year, our new members are already proving very helpful. With our new motivation, as well as our previous experience, we are excited to compete at the competitions.</p>
 <h2>Our Members</h2>
 <div class='container'>
 <div class='row'>
 <div class='col-md-2'><img src='images/Tyler-007c8117.jpg' alt='Picture of Tyler' class='rounded'/></div><div class='col-md-4'><h4>Tyler</h4><p>Tyler has a special ability to design effective and modular robots for a given problem. He has a unique design philosophy, emphasizing the importance of disassembly in the design process. Thanks to his ideas, we are able to rapidly iterate the drivetrain and subsystems of the robot.</p></div>
-<div class='col-md-2'><img src='images/Aseer-5e5edc0c.jpg' alt='Picture of Aseer' class='rounded'/></div><div class='col-md-4'><h4>Aseer</h4><p>Aseer cares about the success of the club, working on outreach and organization, as well as the robot. He has a deep understanding of the inner workings of the computer, and has wrote various programs in languages in C and Python.</p></div>
+<div class='col-md-2'><img src='images/Aseer-5e5edc0c.jpg' alt='Picture of Aseer' class='rounded'/></div><div class='col-md-4'><h4>Aseer</h4><p>Aseer has experience in creating projects in C and Python, and has a good understanding of kinematics. He works on various jobs in robotics, on top of working on the robot. He understands what robotics needs to be successful, and has previous leadership experience on group projects.</p></div>
 </div>
 <div class='row'>
-<div class='col-md-2'><img src='images/Wesley-07e199a5.jpg' alt='Picture of Wesley' class='rounded'/></div><div class='col-md-4'><h4>Wesley</h4><p>Wesley can effectively solve programming problems, and come up with creative solutions to problems encountered. He has an intuitive sense for how the programs work, and previous experience with programming.</p></div>
-<div class='col-md-2'><img src='images/Colin-73c0b153.jpg' alt='Picture of Colin' class='rounded'/></div><div class='col-md-4'><h4>Colin</h4><p>A great builder, designer, and driver, Colin is the all-rounder of the team, able to do every step of creating a robot, from CAD to building. He can quickly learn how to improve the robot by learning from others.</p></div>
+<div class='col-md-2'><img src='images/Wesley-07e199a5.jpg' alt='Picture of Wesley' class='rounded'/></div><div class='col-md-4'><h4>Wesley</h4><p>Wesley can effectively solve programming problems, and come up with creative solutions to problems encountered. He has an intuitive sense for how the programs work, and previous experience with programming. He is our most active programmer, able to quickly write code that is simply intuitive to the driver.</p></div>
+<div class='col-md-2'><img src='images/Colin-73c0b153.jpg' alt='Picture of Colin' class='rounded'/></div><div class='col-md-4'><h4>Colin</h4><p>A great builder, designer, and driver, Colin is the all-rounder of the team, able to do every step of creating a robot, from CAD to building. He can quickly learn how to improve the robot by learning from others. As both a driver and a designer, he understands how the robot should be built.</p></div>
 </div>
 <div class='row'>
 <div class='col-md-2'><img src='images/Rohan-7017e601.jpg' alt='Picture of Rohan' class='rounded'/></div><div class='col-md-4'><h4>Rohan</h4><p>Rohan excels at debugging code. Wesley and him are able to write code to keep up with quickly changing requirements. They are also able to quickly pick up new concepts while programming. Rohan was also very helpful during the building process, able to quickly construct complex subsystems on the robot.</p></div>
-<div class='col-md-2'><img src='images/Turhan-854a7e22.jpg' alt='Picture of Turhan' class='rounded'/></div><div class='col-md-4'><h4>Turhan</h4><p>Turhan looks at problems in a practical way, able to understand a design on a deep level. He truly understands what works and what doesn't. When he looks at the game rules, he sees a winning strategy.</p></div>
+<div class='col-md-2'><img src='images/Turhan-854a7e22.jpg' alt='Picture of Turhan' class='rounded'/></div><div class='col-md-4'><h4>Turhan</h4><p>Turhan looks at problems in a practical way, able to understand a design on a deep level. He truly understands what works and what doesn't. When he looks at the game rules, he sees a winning strategy. He is also able to work with others well, as he is good at communication.</p></div>
 </div>
+</div>
+<h3>Other members</h3>
+<div class='container'>
+<h4 class='row col'>Parthib - Driver</h4>
+<h4 class='row col'>Wadid - Driver</h4>
 </div>
 
 </div>
