--- a/projects/index.html
+++ b/projects/index.html
@@ -69,7 +69,7 @@ Github
 </a>
 </div>
 <div class='col-md-9'>
-<p>robosim is a utility which simulates the VEX python API to run a physics simulation of the robot. It allows one to directly simulate what python code does on the field. VEXCode VR has a greater functionality, but this one is free.</p>
+<p>robosim is a utility which simulates the VEX python API to run a physics simulation of the robot. It allows one to directly simulate what python code does on the field. VEXCode VR has a greater functionality, but this one is free. The plan is to make it fully functional for simulating and testing drivetrains, as well as calculating stats about the robot.</p>
 </div>
 </div>
 <div class='row'>
@@ -106,7 +106,7 @@ Github
 </div>
 <div class='row'>
 <div class='col-md-3'>
-<h3>Docs</h3>
+<h3>Docs [WIP]</h3>
 </div>
 <div class='col-md-9'>
 <p>This set of documentation helps other members get up to speed on principles in classical mechanics. This allows them to understand the mechanics of the robot on a deeper level, and to understand why certain things are the way they are. This documentation also contains documentation for functions in VEX programming, as VEX does not document these well.</p>
