--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ Birchmount Robotics Club
 <div class='container'>
 <h4 class='row col'>Parthib - Driver</h4>
 <h4 class='row col'>Wadid - Driver</h4>
+<h4 class='row col'>[NEW] Michael - Builder</h4>
+<h4 class='row col'>[NEW] Tirtho - Builder</h4>
 </div>
 
 </div>
